[tool.poetry]
name = "something-else"
version = "0.3.0"
description = "Something else package"
authors = ["dansc0de"]

[tool.poetry.dependencies]
python = "^3.10"
twine = "^5.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

